<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.gmail.eamosse.imdb.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/navigation_home_second" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_movies_list_fragment"
            app:destination="@id/navigation_movies_list_fragment" />
    </fragment>
    <fragment
        android:id="@+id/navigation_home_second"
        android:name="com.gmail.eamosse.imdb.ui.home.HomeSecondFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/navigation_home" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.gmail.eamosse.imdb.ui.trending.TrendingFragment"
        android:label="@string/title_trending"
        tools:layout="@layout/trending_fragment" />

    <fragment
        android:id="@+id/navigation_movies_list_fragment"
        android:name="com.gmail.eamosse.imdb.ui.movies.MoviesListFragment"
        android:label="@string/title_movies"
        tools:layout="@layout/fragment_movies_list">
        <argument
            android:name="category"
            app:argType="integer" />
        <action
            android:id="@+id/action_navigation_movies_list_fragment_to_navigation_movies_detail_fragment"
            app:destination="@id/navigation_movies_detail_fragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_movies_detail_fragment"
        android:name="com.gmail.eamosse.imdb.ui.movies.MoviesDetailsFragment"
        android:label="@string/title_movies"
        tools:layout="@layout/fragment_movies_detail">
        <argument
            android:name="movieId"
            app:argType="integer" />
    </fragment>

    <fragment
        android:id="@+id/navigation_list_actors"
        android:name="com.gmail.eamosse.imdb.ui.actors.ActorsListFragment"
        android:label="@string/title_actors"
        tools:layout="@layout/fragment_actors">
        <action
            android:id="@+id/action_navigation_actors_list_fragment_to_navigation_actors_detail_fragment"
            app:destination="@+id/navigation_details_actors" />
    </fragment>

    <fragment
        android:id="@+id/navigation_details_actors"
        android:name="com.gmail.eamosse.imdb.ui.actors.ActorsDetailsFragment"
        android:label="@string/title_actors"
        tools:layout="@layout/fragment_actors">


        <argument
            android:name="actorId"
            app:argType="integer" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.gmail.eamosse.imdb.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
</navigation>